# fastapi-experiments

./: README.md  environment.yml  pyproject.toml
fastapi-experiments/: extensions.json  settings.json
fastapi-tutorial/: .http  README.md  environment.yml  main.py  pyproject.toml
freeCodeCamp-API-development/: main.py
