[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["phbrgnomo <phbrcc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
